    - Remove error template for notpredl, unknownloc, and interrupted, since
      these are internal errors that should not happen normally (and there
      are many other internal errors we do not translate).
    - Add error templates for nogetrelsig and unknownrelsig.
    - Remove debootstrap template for check_target and checkingsize,
      which are not used by debootstrap 0.3.1 anymore.

 -- dann frazier <dannf@debian.org>  Fri, 10 Jun 2005 14:27:12 -0600

base-installer (1.19) unstable; urgency=low

  * Colin Watson
    - Start run-debootstrap progress bar at the appropriate waypoint rather
      than going back to the start (closes: #277949).
    - In templates, say "install the base system" rather than "install
      Debian", and "the base system" rather than "the Debian base system",
      to help with derivative distribution branding.
    - Make apt-get use gpgv --ignore-time-conflict to avoid validation
      errors with apt 0.6 due to clock problems (Ubuntu #8496).
  * Matt Zimmerman
    - Create ubd devices in create_devices() if installing under UML
      (closes: #258307).
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - Spanish (es.po) by Javier Fernández-Sanguino Peña
    - Basque (eu.po)
    - French (fr.po) by Christian Perrier
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Portuguese (pt.po) by Miguel Figueiredo
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Colin Watson <cjwatson@debian.org>  Mon,  6 Jun 2005 12:57:37 +0100

base-installer (1.18) unstable; urgency=low

  * Colin Watson
    - Redirect output from base-installer hooks properly.
    - Clarify and expand base-installer/debootstrap/error/couldntdl text to
      try to answer frequent problems such as badly burned CDs.
    - Add a post-base-installation hook: scripts in
      /usr/lib/post-base-installer.d/ will be run after the base system